appId: ${APP_ID}
---
- launchApp

- extendedWaitUntil:
    visible: '麻雀大会 集計|Table Game Scoreboard'
    timeout: 30000

- runFlow:
    when:
      visible: 'グループ取得エラー|Error Loading Groups'
    commands:
      - tapOn: 'OK'
- runFlow:
    when:
      visible: '登録グループを開けませんでした'
    commands:
      - tapOn: 'OK'

- assertVisible: '麻雀大会 集計|Table Game Scoreboard'
