appId: com.anzaihome.mahjongapp.dev
---
- openLink:
    link: 'mahjongapp-dev://'

- runFlow:
    when:
      visible: '麻雀集計'
    commands:
      - tapOn: '麻雀集計'
      - tapOn:
          text: '常時'
          optional: true

- extendedWaitUntil:
    visible: '麻雀大会 集計'
    timeout: 30000
